# cmake-pytest-module

./: .gitignore  LICENSE  Pytest.cmake  README.md
.github/workflows/: build.yml
example/: CMakeLists.txt  conftest.py
example/integration/: test_service.py
example/tests/: test_class.py  test_module.py
